@@ -223,9 +223,7 @@
                 <version>3.5.2</version>
                 <configuration>
                     <argLine>
-                        @{argLine}
-                        -javaagent:${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar
-                        -Xshare:off
+                        -XX:+EnableDynamicAgentLoading -Xshare:off
                     </argLine>
                 </configuration>
             </plugin>
